# unicode-script

./: .gitignore  Cargo.toml  README.md
scripts/: unicode.py
src/: lib.rs  tables.rs
