[package]
name = "unicode-script"
version = "0.3.0"
authors = ["The Servo Project Developers"]
license = "MIT / Apache-2.0"
description = "Look up the Unicode Script property"
repository = "https://github.com/servo/unicode-script"
documentation = "https://docs.rs/unicode-script/"
readme="README.md"
keywords = ["unicode", "text", "i18n", "script"]

[features]
harfbuzz = ["harfbuzz-sys"]

[dependencies.harfbuzz-sys]
version = "0.2"
optional = true
